syntax = "proto3";

package io.shopping.cart.view;

import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "io/shopping/cart/entity/shopping_cart_entity.proto";
import "io/shopping/cart/view/order.proto";

option java_outer_classname = "CustomerOrdersByDateOuter";

service CustomerOrdersByDate {
  option (akkaserverless.service) = {
    type: SERVICE_TYPE_VIEW
  };

  rpc GetCustomerOrdersByDate(CustomerOrdersByDateRequest) returns (stream CustomerOrdersByDateResponse) {
    option (akkaserverless.method).view.query = {
      query: "SELECT * AS orders"
             "  FROM customer_orders_by_date"
             " WHERE customer_id = :customer_id"
             "   AND checked_out_utc.seconds >= :`from_date.seconds`"
             "   AND checked_out_utc.seconds <= :`to_date.seconds`"
    };
    option (google.api.http) = {
      get: "/customer-orders-by-date"
    };
  }

  rpc ProcessCartCheckedOut(entity.CartCheckedOut) returns (Order) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "customer_orders_by_date"
      transform_updates: true
    };
  }

  rpc ProcessCartShipped(entity.CartShipped) returns (Order) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "customer_orders_by_date"
      transform_updates: true
    };
  }

  rpc ProcessCartDelivered(entity.CartDelivered) returns (Order) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "customer_orders_by_date"
      transform_updates: true
    };
  }

  rpc ProcessCartDeleted(entity.CartDeleted) returns (Order) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "customer_orders_by_date"
      transform_updates: true
    };
  }

  rpc ProcessDatesChanged(entity.DatesChanged) returns (Order) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "customer_orders_by_date"
      transform_updates: true
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (Order) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "shopping_cart"
    };
    option (akkaserverless.method).view.update = {
      table: "customer_orders_by_date"
      transform_updates: true
    };
  }
}

message CustomerOrdersByDateRequest {
  string customer_id = 1;
  google.protobuf.Timestamp from_date = 2;
  google.protobuf.Timestamp to_date = 3;
}

message CustomerOrdersByDateResponse {
  repeated Order orders = 1;
}
